--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body,html {
   font-size: 1.2rem;
   padding: 0.8rem;
   transition: all .07s ease;
+  height: 1.5rem;
   width: 5rem;
   text-align: center;
   color: black;
